--- a/ClientApp/src/index.html
+++ b/ClientApp/src/index.html
@@ -7,6 +7,7 @@
     
     <!-- bootstrap css -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <app>Loading...</app>
